# alpha-research

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default.toml  synthetic.toml
docs/: research_summary.md  research_summary_template.md  resume_bullets.md
notebooks/: alpha_research_walkthrough.ipynb
src/alpha_research/: __init__.py  backtest.py  cli.py  config.py  data.py  features.py  modeling.py  portfolio.py  reporting.py
tests/: test_config.py  test_data.py  test_edge_cases.py  test_features.py  test_integration.py  test_modeling.py  test_portfolio_backtest.py
