[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-research"
version = "0.1.0"
description = "Cross-sectional equity alpha research platform for systematic equities research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
alpha-research = "alpha_research.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
